--- a/DungeonsAndDragonsWeb.csproj
+++ b/DungeonsAndDragonsWeb.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.15">
       <PrivateAssets>all</PrivateAssets>
@@ -31,7 +32,6 @@
 
   <ItemGroup>
     <None Include="wwwroot\js\bootstrap.min.js" />
-    <None Include="wwwroot\js\daddy.js" />
     <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.css.map" />
     <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.min.css.map" />
     <None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.rtl.css.map" />
@@ -75,6 +75,12 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\images\non-static\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="CodeExtensions">
+      <HintPath>Plugins\CodeExtensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
