--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,8 @@
     }
   },
   "MySqlConnection": {
-    "Server": "locahost",
-    "Port": "3301",
+    "Server": "localhost",
+    "Port": "3306",
     "Username": "root",
     "Password": "",
     "Database": "daddy"
