--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -25,7 +25,9 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/daddy.js"
+            ]
           },
           "configurations": {
             "production": {
